# GitActionExample

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  mac.yml  windows.yml
src/: main.cpp
